{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 117,
  "lineage": "dcdd4479-9b73-2570-5c1d-d9a187f77abc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "move-ms-security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0230bd60aa48260c6",
            "arn": "arn:aws:ec2:us-east-1:304671886145:instance/i-0f6727e115f6095f1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f6727e115f6095f1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "move-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d923667b144b75a6",
            "private_dns": "ip-192-168-0-12.ec2.internal",
            "private_ip": "192.168.0.12",
            "public_dns": "ec2-3-227-12-240.compute-1.amazonaws.com",
            "public_ip": "3.227.12.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-045c8c3075515b6b4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-08b6dc91f3a6e49b6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09bfb5b26af7f4939",
            "tags": {
              "name": "move-ms-security-1"
            },
            "tags_all": {
              "name": "move-ms-security-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08b6dc91f3a6e49b6"
            ]
          },
          "dependencies": [
            "aws_security_group.move_security_group",
            "aws_subnet.move_subnet1",
            "aws_vpc.move_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0230bd60aa48260c6",
            "arn": "arn:aws:ec2:us-east-1:304671886145:instance/i-0818737fd339db679",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0818737fd339db679",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "move-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02adf44dcafac0895",
            "private_dns": "ip-192-168-0-50.ec2.internal",
            "private_ip": "192.168.0.50",
            "public_dns": "ec2-54-160-1-225.compute-1.amazonaws.com",
            "public_ip": "54.160.1.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0091ed6ba11b1e7e1",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-08b6dc91f3a6e49b6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09bfb5b26af7f4939",
            "tags": {
              "name": "move-ms-security-2"
            },
            "tags_all": {
              "name": "move-ms-security-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08b6dc91f3a6e49b6"
            ]
          },
          "dependencies": [
            "aws_security_group.move_security_group",
            "aws_subnet.move_subnet1",
            "aws_vpc.move_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "move_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304671886145:internet-gateway/igw-0cdf5a16165441630",
            "id": "igw-0cdf5a16165441630",
            "owner_id": "304671886145",
            "tags": {
              "app": "move",
              "name": "move-internet-gateway"
            },
            "tags_all": {
              "app": "move",
              "name": "move-internet-gateway"
            },
            "vpc_id": "vpc-00e14ad0f6afe589f"
          },
          "dependencies": [
            "aws_vpc.move_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "move_tabla_enrutamiento_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab3351c1bd09a6ab",
            "original_route_table_id": "rtb-08e3134f463341c2e",
            "route_table_id": "rtb-06ac37caeba795a61",
            "vpc_id": "vpc-00e14ad0f6afe589f"
          },
          "dependencies": [
            "aws_internet_gateway.move_internet_gateway",
            "aws_route_table.move_route_table",
            "aws_vpc.move_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "move_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304671886145:route-table/rtb-06ac37caeba795a61",
            "id": "rtb-06ac37caeba795a61",
            "owner_id": "304671886145",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cdf5a16165441630",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "app": "move",
              "name": "move-route-table"
            },
            "tags_all": {
              "app": "move",
              "name": "move-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e14ad0f6afe589f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.move_internet_gateway",
            "aws_vpc.move_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "move_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304671886145:security-group/sg-08b6dc91f3a6e49b6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b6dc91f3a6e49b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "move_security_group",
            "name_prefix": "",
            "owner_id": "304671886145",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00e14ad0f6afe589f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.move_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "move_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304671886145:subnet/subnet-09bfb5b26af7f4939",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.0.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bfb5b26af7f4939",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "304671886145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "app": "move",
              "name": "move-subnet-1"
            },
            "tags_all": {
              "app": "move",
              "name": "move-subnet-1"
            },
            "vpc_id": "vpc-00e14ad0f6afe589f"
          },
          "dependencies": [
            "aws_vpc.move_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "move_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304671886145:subnet/subnet-02fe62485ef3c96d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.64/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fe62485ef3c96d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "304671886145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "app": "move",
              "name": "move-subnet-2"
            },
            "tags_all": {
              "app": "move",
              "name": "move-subnet-2"
            },
            "vpc_id": "vpc-00e14ad0f6afe589f"
          },
          "dependencies": [
            "aws_vpc.move_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "move_subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304671886145:subnet/subnet-0df952ae629435918",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.0.128/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df952ae629435918",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "304671886145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "app": "move",
              "name": "move-subnet-3"
            },
            "tags_all": {
              "app": "move",
              "name": "move-subnet-3"
            },
            "vpc_id": "vpc-00e14ad0f6afe589f"
          },
          "dependencies": [
            "aws_vpc.move_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "move_subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304671886145:subnet/subnet-0046bd099f37a00fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.0.192/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0046bd099f37a00fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "304671886145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "app": "move",
              "name": "move-subnet-4"
            },
            "tags_all": {
              "app": "move",
              "name": "move-subnet-4"
            },
            "vpc_id": "vpc-00e14ad0f6afe589f"
          },
          "dependencies": [
            "aws_vpc.move_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "move_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304671886145:vpc/vpc-00e14ad0f6afe589f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-036caa063302ad0a6",
            "default_route_table_id": "rtb-08e3134f463341c2e",
            "default_security_group_id": "sg-06107726de94de8e7",
            "dhcp_options_id": "dopt-0c8b1c9cefe6cd08b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00e14ad0f6afe589f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08e3134f463341c2e",
            "owner_id": "304671886145",
            "tags": {
              "app": "move",
              "name": "move-vpc"
            },
            "tags_all": {
              "app": "move",
              "name": "move-vpc"
            }
          }
        }
      ]
    }
  ]
}